[package]
name = "pio-usb-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A pure Rust PIO-based USB host/device driver for RP2040"

[dependencies]
embassy-futures = "0.1.2"
embassy-rp = { version = "0.10.0", features = ["unstable-pac", "time-driver"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embassy-usb = { version = "0.6.0", default-features = false }

cortex-m = "0.7.7"
defmt = { version = "1.1.0", optional = true }
pio = "0.3.0"

[features]
default = ["rp2040"]

rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]

defmt = ["dep:defmt", "embassy-rp/defmt", "embassy-usb/defmt", "embassy-time/defmt"]
